infrastructure/k8s/posts.yaml
apiVersion: v1
kind: Pod
metadata:
    name: posts
spec:
    containers:
      - image:  insaf730hamzin/posts:0.0.1
        name:  posts
